# casml4se-simpsons-transfer-learning

./: .env.example  .gitignore  AGENTS.md  README.md  init_ml_project.sh  main.py  pyproject.toml  train_simpsons_optimized.py
tools/: generate_overview.py  prepare_data.py
